@@ -9,6 +9,11 @@
   <string id="30005">Yes</string>
   <string id="30006">Start downloading after adding new links</string>
   <string id="30007">Interface</string>
+  <string id="30020">Files</string>
+  <string id="30021">Default Path</string>
+  <string id="30022">Default TXT File</string>
+  <string id="30023">Default DLC File</string>
+  
   
   <!--GENERAL STRINGS -->
   <string id="30050">All Packages</string>
@@ -30,4 +35,6 @@
   <string id="30066">Update JDownloader</string>
   <string id="30067">Restart JDownloader</string>
   <string id="30068">Shutdown JDownloader</string>
+  <string id="30069">Add links from textfile</string>
+  <string id="30070">Add link container</string>
 </strings>
